fix(location and hours): fixing store location ouput, fixing mobile text alignment.

--- a/assets/section-hours-and-location.css
+++ b/assets/section-hours-and-location.css
@@ -69,6 +69,8 @@
   }
 
   .icon-with-text {
+    text-align: center;
+    flex-direction: column;
     justify-content: center;
   }
   
